--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @use 'components/alert-detail-panel';
 @use 'components/city-search-modal';
 @use 'components/controls/layer-selector';
+@use 'components/carousels/map-carousel';
 @use 'components/carousels/touch-carousel';
 @use 'components/widgets/wind-compass';
 @use 'components/widgets/sun-timeline';
