--- a/src/styles/components/carousels/_map-carousel.scss
+++ b/src/styles/components/carousels/_map-carousel.scss
@@ -68,7 +68,8 @@
 
   &__track {
     display: flex;
-    align-items: stretch;
+    align-items: center;
+    justify-content: center;
     gap: 0.55rem;
     flex: 1;
     min-width: 0;
@@ -104,6 +105,7 @@
     box-shadow: var(--home-shadow-soft);
     transition: $transition-fast;
     text-align: center;
+    flex-grow: 1;
 
     @include md {
       min-width: 86px;
